# jat2167_final_project

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/source/: jat2167_final_mds2.doctree  modules.doctree
docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: jat2167_final_mds2.rst.txt
docs/_build/html/source/: jat2167_final_mds2.html  modules.html
docs/source/: modules.rst
jat2167_final_mds2/: __init__.py
tests/: test_jat2167_final_mds2.py
