[tool.poetry]
name = "jat2167_final_mds2"
version = "0.1.0"
description = "LastFm API client and music newsletter generator"
authors = ["Julia Tache <jat2167@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
codecov = "^2.1.11"
python-semantic-release = "^7.8.1"
flake8 = "^3.8.4"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
